ISSUE:  700 PURPOSE: Menu integration  DESC:  changed the font-size of .logout to .89em after testing on smallest phone I know: iPhone 5 (from simulator). It means I need to change top back to 5px on .logout

--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -392,11 +392,11 @@ input#Password {
 	}
 	.logout {
 		padding: .1em .45em;
-		font-size: .83em;
+		font-size: .89em;
 		font-weight: bold;
 		position: absolute;
 		right: 1em;
-		top: 6px;
+		top: 5px;
 		font-family: Arial narrow, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
 		letter-spacing: .02em;
 	}
